# llama-fun

./: README.md  pyproject.toml
data-agents/: 1-pyfunctions.py  2-wikipedia.py  3-multitool.py  4-wikipedia-redux.py  5-imdbQuery.py  imdbToolSpec.py
embedding-persist-query-db/: 1-Embeddings.py  10-Embedding-Ollama.py  11-EmbeddingBench-Ollama.py  2-EmbeddingBench.py  3-Persist.py  4-Query.py  5-Persist-PG.py  6-Query-PG.py  7-Persist-PG-Hybrid.py  7-Query-PG-Hybrid.py  8-Query-Ollama.py  9-Query-PG-Ollama.py
natural-language-sql/: 1-create-db.py  2-insert-data.py  3-query-data.py  4-llm-query-known-table.py  5-llm-query-table-mappings.py  6-llm-query-table-mappings-ollama.py  7a-setup.py  7b-table-joins.py
